<resources>
    <string name="app_name">EcoRed</string>

    <string name="join_title">Hi, \njoin the magical world of EcoRed!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="sign_in_text">Welcome back! \nLogin to your account.</string>
    <string name="sign_up_text">Create your account</string>
    <string name="password">password</string>
    <string name="password_again">password again</string>
    <string name="mail">e-mail</string>
    <string name="go_sign_up_text">Don\'t have an account? <u>Sign Up</u></string>
    <string name="go_sign_in_text">Already have account? <u>Sign In</u></string>

    <string name="error">Error!</string>
    <string name="warning">Warning!</string>
    <string name="success">Success!</string>
    <string name="info">Info!</string>


    <string name="character_length_error">Your password must be between 8 and 30 characters.</string>
    <string name="need_digit_error">Your password must contain numbers.</string>
    <string name="need_letter_error">Your password must contain letters.</string>
    <string name="password_match_error">Passwords do not match.</string>
    <string name="privacy_not_checked_error">Please read and accept the privacy agreement.</string>
    <string name="privacy_title_button">I have read and accept the <u>privacy agreement</u>.</string>


    <string name="please_fill_all_fields">Please make sure you fill in all fields.</string>
    <string name="invalid_mail">Invalid email address format.</string>
    <string name="sign_in_error">Login failed, please try again.</string>
    <string name="invalid_password">Please make sure you follow the password rules.</string>
    <string name="mail_already_used">This email address is already in use.</string>
    <string name="sign_up_error">We encountered an error while registering, please try again.</string>
    <string name="password_match_error_2">Please make sure the passwords match.</string>

    <string name="name">name</string>
    <string name="last_name">last name</string>

    <string name="next">Next</string>
    <string name="walkthrough_title_1">Welcome to EcoRed</string>
    <string name="walkthrough_title_2">Shop Smart with EcoRed</string>
    <string name="walkthrough_title_3">Stay Updated</string>
    <string name="walkthrough_desc_1">Discover endless shopping possibilities at EcoRed! From fashion to electronics, we have it all. Enjoy fast delivery and great service.</string>
    <string name="walkthrough_desc_2">Browse our extensive catalog, add items to your cart, and make secure payments. Enjoy personalized recommendations and exclusive deals.</string>
    <string name="walkthrough_desc_3">Allow EcoRed to send you notifications about the latest offers, order updates, and more. Stay informed and get the best shopping experience.</string>

    <string name="home_page">Home</string>
    <string name="my_favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="my_account">My Account</string>


    <string name="search">Search</string>
    <string name="daily_deal_title">Deals of the Day</string>
    <string name="view_all">View All</string>
    <string name="highlight_products">Highlights Products</string>
    <string name="categories">Categories</string>

    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="history">History</string>
    <string name="clear_all">Clear All</string>
    <string name="similar_products">Similar Products</string>
    <string name="read_more">Read More</string>
    <string name="my_cart">My Cart</string>
    <string name="complete_shopping">Complete Shopping</string>
    <string name="empty_cart">You didn\'t add any product. Shop now.</string>
    <string name="checkout">Checkout</string>
    <string name="complete_payment">Complete Payment</string>

    <string name="no_card">No Card</string>
    <string name="please_add_card">Please add a card</string>
    <string name="no_address">No Address</string>
    <string name="please_add_address">Please add an address</string>

    <string name="address_already_used">Address title already used. Change the title!</string>
    <string name="card_already_used">Card title already used. Change the title!</string>

    <string name="add_new_address">+ Add New Address</string>
    <string name="contact_info">Contact information</string>
    <string name="address_info">Address information</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="detailed_address">Detailed Address</string>
    <string name="address_title">Address Title</string>
    <string name="save_address">Save Address</string>

    <string name="add_new_card">+ Add New Card</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Expiration Date</string>
    <string name="card_title">Card Title</string>
    <string name="title">Title</string>
    <string name="save_card">Save Card</string>

    <string name="addresses">Addresses</string>
    <string name="cards">Credit Cards</string>
    <string name="amount_with_count">Amount: %1$d</string>

    <string name="card_info">Card Information</string>
    <string name="your_products">Your Products</string>

    <string name="verify_otp">We send code to  %1$s, please enter the code and verify.</string>
    <string name="order_success">Successfully ordered. Thank you!</string>
    <string name="account_created">Account Created: %1$s</string>

    <string name="pass_change_success">Password changed successfully.</string>
    <string name="pass_change_failed">Password change failed, try again.</string>

    <string name="order_history">Order History</string>
    <string name="products_in_order">Products In Order</string>
    <string name="order_detail">Order Detail</string>

    <string name="change_password">Change Password</string>

    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_again">New Password Again</string>

    <string name="my_addresses">My Addresses</string>
    <string name="my_cards">My Credit Cards</string>

    <string name="log_out">Log out</string>

    <string name="invalid_card_number">Invalid card number</string>
    <string name="invalid_month">Invalid month</string>
    <string name="invalid_year">Invalid year</string>
    <string name="invalid_ccv">Invalid CCV</string>

</resources>