<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:elevation="40dp"
        android:focusable="true"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="heart_loading.json"
            app:lottie_loop="true" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:elevation="10dp"
            app:cardCornerRadius="180dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/eco_red_512_black" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:text="@string/sign_in_text"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:maxLength="256"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#5E5E5E" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/password"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/main_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_without_border_with_color_8_radius"
            android:backgroundTint="@color/main_red"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="120dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/main_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/main_red" />
        </LinearLayout>


        <TextView
            android:id="@+id/goToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:text="@string/go_sign_up_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>


</FrameLayout>